# zetamuck

./: COPYRIGHT  array.c  boolexp.c  compile.c  configure  events.c  inst.c  interface.c  json.c  msgparse.c  netresolve.c  p_db.c  p_file.c  p_http.c  p_regex.c  p_socket.c  p_stack.c  proto  reslvd.c  set.c  tune.c
game/data/: help.txt  man.txt  sysparms.txt
game/data/welcome/: fbi.txt
inc/: array.h  autoconf.h.in  db.h  interp.h  msgparse.h  p_array.h  p_http.h  p_regex.h  p_stack.h  version.h
m4/: debug.m4  headers.m4
m4/libs/: mysql.m4
src/: Makefile.am  Makefile.in  cgi.c  compile.c  compress.c  configure  configure.ac  configure.in  create.c  credits.c  crt_malloc.c  db.c  debugger.c  edit.c  game.c  help.c  inst.c  interface.c  interp.c  look.c  match.c  mcpgui.c  mfuns.c  mfuns3.c  move.c  msgparse.c  newhttp.c  p_array.c  p_connects.c  p_db.c  p_file.c  p_html.c  p_http.c  p_json.c  p_misc.c  p_props.c  p_strings.c  p_system.c  player.c  property.c  (+7 more)
src/inc/: autoconf.h.in  config.h.in  db.h  defaults.h  externs.h  interface.h  json.h  msgparse.h  newhttp.h  p_socket.h  p_strings.h  props.h  tune.h  version.h
src/m4/: compiler.m4  features.m4  libfuncs.m4  libs.m4  misc.m4
src/m4/gnulib/: libunistring.m4
src/m4/libs/: jansson.m4  openssl.m4  pcre.m4  unistring.m4  zlib.m4
src/telnet/: Makefile  charset.c  mccp.c  mssp.c  telnet.c  termtype.c
